<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SecondIntroSliderScreenFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/capture_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:src="@drawable/organize"
        android:layout_centerInParent="true"
        android:contentDescription="@string/welcome_to_notewave" />
    <TextView
        android:id="@+id/capture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/capture_header"
        android:text="@string/capture_title"
        android:fontFamily="@font/inter_semibold"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/capture_title"
        android:text="@string/capture_description"
        android:fontFamily="@font/inter_light"
        android:textSize="16sp"/>

</RelativeLayout>