<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".fragments.FirstIntroSliderScreenFragment">

    <ImageView
        android:id="@+id/welcome_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/welcome_to_notewave"
        android:src="@drawable/adding_notes" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_header"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/inter_light"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/welcome_description"
        android:textSize="16sp" />
</RelativeLayout>