<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".fragments.NoteTitleModalBottomSheet">

    <LinearLayout
        android:id="@+id/bSNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/dHNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_semibold"
            android:padding="4dp"
            android:text="@string/enter_title"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tILAddTitle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:hint="@string/untitled_note"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIETAddTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:inputType="textCapWords|textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bTAddTitle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/save" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>